Only extract PortMaster App on first boot if device actually can make use of it

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -31,6 +31,7 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 export SD_DEV="/dev/mmcblk0p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
+export DEVICE_SUPPORTS_PORTMASTER="false"
 
 export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
