--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -33,6 +33,7 @@ export EVENT_PATH_VOLUME="/dev/input/event0"
 export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
+export DEVICE_SUPPORTS_PORTMASTER="true"
 
 export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
 
