--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -30,6 +30,7 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 export SD_DEV="/dev/mmcblk1p1"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
+export DEVICE_SUPPORTS_PORTMASTER="false"
 
 export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 
