--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -27,6 +27,7 @@ export EVENT_PATH_JOYPAD="/dev/input/event4"
 
 export SD_DEV="/dev/mmcblk0p1"
 
+export DEVICE_SUPPORTS_PORTMASTER="false"
 
 export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
