Chore: label and organize $PLATFORM.cfg files for easier maintenance and standardization moving forward

--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -1,12 +1,20 @@
 #!/bin/sh
 # TRIMUI Smart Pro platform specific variables
 
+  #################################
+#####   IDENTITY AND FIRMWARE   #####
+  #################################
+
 export BRAND="TrimUI"
 export FW_FILE="trimui_tg5040.awimg"
 export REQ_MB_TO_UPDATE_FW=1280
-
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-smart-pro-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
+export SD_DEV="/dev/mmcblk1p1"
+
+  ###################################
+#####   DISPLAY CHARACTERISTICS   #####
+  ###################################
 
 export DISPLAY_TEXT_ELF_WIDTH="1200"
 export DISPLAY_WIDTH="1280"
@@ -14,28 +22,38 @@ export DISPLAY_HEIGHT="720"
 export DISPLAY_ROTATION="0"
 export DISPLAY_ASPECT_RATIO="16:9"
 
+  ########################
+#####   CPU SETTINGS   #####
+  ########################
+
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=1008000
 export DEVICE_PERF_FREQ=1800000
 export DEVICE_MAX_FREQ=2000000
 
+  ##################################################
+#####   OTHER HARDWARE FEATURES AND INTERFACES   #####
+  ##################################################
+
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
 export DEVICE_BRIGHTNESS_PATH="/tmp/b" # not really, but keeps it from pooping on the root
 export RUMBLE_GPIO="gpio227"
+export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 
-export EVENT_PATH_KEYBOARD="/dev/input/event3"
-export EVENT_PATH_JOYPAD="/dev/input/event4"
-
-export SD_DEV="/dev/mmcblk1p1"
+  ###############################################
+#####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
+  ###############################################
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 
-export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
+  ######################################
+#####   KEY CODES AND INPUT EVENTS   #####
+  ######################################
 
-# Keycodes
-
+export EVENT_PATH_KEYBOARD="/dev/input/event3"
+export EVENT_PATH_JOYPAD="/dev/input/event4"
 export POWER_EVENT="/dev/input/event1"
 
 export B_POWER="1 116"
@@ -78,6 +96,10 @@ export STICK_LEFT_2="3 4 -32767" # negative for left
 export STICK_RIGHT_2="3 4 32767" # positive for right
 export STICK_UP_2="3 3 -32767"   # negative for up
 export STICK_DOWN_2="3 3 32767"  # positive for down
+
+  #########################################
+#####   VOLUME AND BRIGHTNESS MAPPING   #####
+  #########################################
 
 export SYSTEM_VOLUME_0="0"
 export SYSTEM_VOLUME_1="12"
