--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -1,12 +1,20 @@
 #!/bin/sh
 # Miyoo A30 platform specific variables
 
+  #################################
+#####   IDENTITY AND FIRMWARE   #####
+  #################################
+
 export BRAND="Miyoo"
 export FW_FILE="miyoo282_fw.img"
 export REQ_MB_TO_UPDATE_FW=48
-
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo"
+export SD_DEV="/dev/mmcblk0p1"
+
+  ###################################
+#####   DISPLAY CHARACTERISTICS   #####
+  ###################################
 
 export DISPLAY_TEXT_ELF_WIDTH="600"
 export DISPLAY_WIDTH="640"
@@ -14,29 +22,38 @@ export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="270"
 export DISPLAY_ASPECT_RATIO="4:3"
 
+  ########################
+#####   CPU SETTINGS   #####
+  ########################
+
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=648000
 export DEVICE_PERF_FREQ=1344000
 export DEVICE_MAX_FREQ=1512000
 
+  ##################################################
+#####   OTHER HARDWARE FEATURES AND INTERFACES   #####
+  ##################################################
 
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
 export RUMBLE_GPIO="not applicable"
+export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
-export EVENT_PATH_KEYBOARD="/dev/input/event3"
-export EVENT_PATH_JOYPAD="/dev/input/event4"
-
-export SD_DEV="/dev/mmcblk0p1"
+  ###############################################
+#####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
+  ###############################################
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 
-export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
+  ######################################
+#####   KEY CODES AND INPUT EVENTS   #####
+  ######################################
 
-# Keycodes
-
+export EVENT_PATH_KEYBOARD="/dev/input/event3"
+export EVENT_PATH_JOYPAD="/dev/input/event4"
 export POWER_EVENT="/dev/input/event0"
 
 export B_POWER="1 116"
@@ -69,6 +86,10 @@ export B_VOLUP_2="volume up"
 export B_VOLDOWN="1 114"
 export B_VOLDOWN_2="volume down"
 export B_MENU="1 1"
+
+  #########################################
+#####   VOLUME AND BRIGHTNESS MAPPING   #####
+  #########################################
 
 export SYSTEM_VOLUME_0="0"
 export SYSTEM_VOLUME_1="12"
