--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -1,12 +1,20 @@
 #!/bin/sh
 # Miyoo Flip platform specific variables
 
+  #################################
+#####   IDENTITY AND FIRMWARE   #####
+  #################################
+
 export BRAND="Miyoo"
 export FW_FILE="miyoo355_fw.img"
 export REQ_MB_TO_UPDATE_FW=384
-
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
+export SD_DEV="/dev/mmcblk1p1"
+
+  ###################################
+#####   DISPLAY CHARACTERISTICS   #####
+  ###################################
 
 export DISPLAY_TEXT_ELF_WIDTH="600"
 export DISPLAY_WIDTH="640"
@@ -14,31 +22,39 @@ export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
 export DISPLAY_ASPECT_RATIO="4:3"
 
+  ########################
+#####   CPU SETTINGS   #####
+  ########################
+
 export DEVICE_CORES_ONLINE=0123
 export DEVICE_SMART_FREQ=816000
 export DEVICE_PERF_FREQ=1800000
 export DEVICE_MAX_FREQ=1992000
 
+  ##################################################
+#####   OTHER HARDWARE FEATURES AND INTERFACES   #####
+  ##################################################
+
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/class/leds/work"
 export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight/brightness"
 export RUMBLE_GPIO="gpio20"
+export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
 
-export HOME="/mnt/SDCARD"
-
-export EVENT_PATH_KEYBOARD="/dev/input/event5"
-export EVENT_PATH_JOYPAD="/dev/input/event5"
-export EVENT_PATH_VOLUME="/dev/input/event0"
-
-export SD_DEV="/dev/mmcblk1p1"
+  ###############################################
+#####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
+  ###############################################
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="true"
 
-export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
+  ######################################
+#####   KEY CODES AND INPUT EVENTS   #####
+  ######################################
 
-# Keycodes
-
+export EVENT_PATH_KEYBOARD="/dev/input/event5"
+export EVENT_PATH_JOYPAD="/dev/input/event5"
+export EVENT_PATH_VOLUME="/dev/input/event0"
 export POWER_EVENT="/dev/input/event2"
 
 export B_POWER="1 116"
@@ -86,6 +102,10 @@ export STICK_RIGHT_2="3 4"
 export STICK_UP_2="3 3"  
 export STICK_DOWN_2="3 3" 
 
+  #########################################
+#####   VOLUME AND BRIGHTNESS MAPPING   #####
+  #########################################
+  
 export SYSTEM_VOLUME_0="0"
 export SYSTEM_VOLUME_1="5"
 export SYSTEM_VOLUME_2="10"
