--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -1,10 +1,22 @@
 #!/bin/sh
-# Miyoo MINI FLIP Variables
+# Miyoo Mini/Plus/Flip Variables
 
+# NOTE: many of these values are unverified.
+
+  #################################
+#####   IDENTITY AND FIRMWARE   #####
+  #################################
+
+export BRAND="Miyoo"
+export FW_FILE="various"    # different for each of og/mini/flip
+export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/mini-flip-system.json"
 export SYSTEM_PATH="/customer/"
-export BRAND="Miyoo"
-export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/miyoomini/bin/python3
+export SD_DEV="/dev/mmcblk0p1"
+
+  ###################################
+#####   DISPLAY CHARACTERISTICS   #####
+  ###################################
 
 export DISPLAY_TEXT_ELF_WIDTH="not applicable"
 export DISPLAY_WIDTH="640"
@@ -12,27 +24,38 @@ export DISPLAY_HEIGHT="480"
 export DISPLAY_ROTATION="0"
 export DISPLAY_ASPECT_RATIO="4:3"
 
+  ########################
+#####   CPU SETTINGS   #####
+  ########################
+
 export DEVICE_CORES_ONLINE=01
 export DEVICE_SMART_FREQ=648000
 export DEVICE_PERF_FREQ=1344000
 export DEVICE_MAX_FREQ=1600000
 
+  ##################################################
+#####   OTHER HARDWARE FEATURES AND INTERFACES   #####
+  ##################################################
+
 export BATTERY="/sys/class/power_supply/battery"
 export LED_PATH="/sys/devices/platform/sunxi-led/leds/led1"
 export DEVICE_BRIGHTNESS_PATH="/sys/devices/virtual/disp/disp/attr/lcdbl"
 export RUMBLE_GPIO="unknown"    #todo - add this or mark not applicable
+export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
+
+  ###############################################
+#####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
+  ###############################################
+
+export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/miyoomini/bin/python3
+export DEVICE_SUPPORTS_PORTMASTER="false"
+
+  ######################################
+#####   KEY CODES AND INPUT EVENTS   #####
+  ######################################
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
-
-export SD_DEV="/dev/mmcblk0p1"
-
-export DEVICE_SUPPORTS_PORTMASTER="false"
-
-export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
-
-# Keycodes
-
 export POWER_EVENT="/dev/input/event0"
 
 export B_POWER="1 116"
@@ -65,6 +88,10 @@ export B_VOLUP_2="volume up"
 export B_VOLDOWN="1 114"
 export B_VOLDOWN_2="volume down"
 export B_MENU="1 1"
+
+  #########################################
+#####   VOLUME AND BRIGHTNESS MAPPING   #####
+  #########################################
 
 export SYSTEM_VOLUME_0="0"
 export SYSTEM_VOLUME_1="12"
