simplify check_if_fw_needs_update() runtimeHelper by offloading TARGET_FW_VERSION to $PLATFORM.cfg files

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -7,6 +7,7 @@
 
 export BRAND="Miyoo"
 export FW_FILE="miyoo282_fw.img"
+export TARGET_FW_VERSION="20240713100458"
 export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/a30-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo"
