--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -7,6 +7,7 @@
 
 export BRAND="Miyoo"
 export FW_FILE="miyoo355_fw.img"
+export TARGET_FW_VERSION="20250627233124"
 export REQ_MB_TO_UPDATE_FW=384
 export SYSTEM_JSON="/mnt/SDCARD/Saves/flip-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/miyoo355"
