--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -9,6 +9,7 @@
 
 export BRAND="Miyoo"
 export FW_FILE="various"    # different for each of og/mini/flip
+export TARGET_FW_VERSION="202510011046" # this is the Mini Flip specifically
 export REQ_MB_TO_UPDATE_FW=48
 export SYSTEM_JSON="/mnt/SDCARD/Saves/mini-flip-system.json"
 export SYSTEM_PATH="/customer/"
