--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -7,6 +7,7 @@
 
 export BRAND="TrimUI"
 export FW_FILE="trimui_tg3040.awimg"
+export TARGET_FW_VERSION="1.1.1"
 export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-brick-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
