--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -7,6 +7,7 @@
 
 export BRAND="TrimUI"
 export FW_FILE="trimui_tg5050.awimg"
+export TARGET_FW_VERSION="1.0.1"
 export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-smart-pro-s-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
