select which archives to unstage for unpacking at runtime by device characteristics rather than hardcoded per device

--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -48,6 +48,8 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
+export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="false"
+export DEVICE_USES_64_BIT_RA="false"
 
   ######################################
 #####   KEY CODES AND INPUT EVENTS   #####
