--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -50,6 +50,8 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/miyoomini/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
+export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="false"
+export DEVICE_USES_64_BIT_RA="false"
 
   ######################################
 #####   KEY CODES AND INPUT EVENTS   #####
