--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -48,6 +48,8 @@ export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
+export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="true"
+export DEVICE_USES_64_BIT_RA="true"
 
   ######################################
 #####   KEY CODES AND INPUT EVENTS   #####
