create run_trimui_blobs() runtimeHelper

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -39,7 +39,7 @@ export DEVICE_MAX_FREQ=2160000
 export BATTERY="/sys/class/power_supply/axp2202-battery"
 export LED_PATH="/tmp"               # not really, but keeps it from pooping on the root
 export DEVICE_BRIGHTNESS_PATH="/sys/class/backlight/backlight0/brightness"
-export RUMBLE_GPIO="not applicable"
+export RUMBLE_GPIO="236"    # doesn't use the same vibration method as the other devices though
 export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant/wpa_supplicant.conf"
 
   ###############################################
