TSPS: identify stock system brightness curve

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -125,3 +125,16 @@ export SYSTEM_VOLUME_17="216"
 export SYSTEM_VOLUME_18="229"
 export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
+
+# actual brightness scale used by stock/keymon
+export SYSTEM_BRIGHTNESS_0="10"
+export SYSTEM_BRIGHTNESS_1="31"
+export SYSTEM_BRIGHTNESS_2="52"
+export SYSTEM_BRIGHTNESS_3="73"
+export SYSTEM_BRIGHTNESS_4="94"
+export SYSTEM_BRIGHTNESS_5="115"
+export SYSTEM_BRIGHTNESS_6="136"
+export SYSTEM_BRIGHTNESS_7="157"
+export SYSTEM_BRIGHTNESS_8="178"
+export SYSTEM_BRIGHTNESS_9="199"
+export SYSTEM_BRIGHTNESS_10="220"
