--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -24,7 +24,28 @@
         "puae2021"
       ],
       "selected": "uae4arm",
-      "overrides": {}
+      "overrides": {},
+      "devices": [
+        "MIYOO_A30",
+        "MIYOO_FLIP",
+        "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
+        "TRIMUI_BRICK"
+      ]
+    },
+    "Emulator_MiyooMini": {
+      "display": "Retroarch Core",
+      "options": [
+        "uae4arm",
+        "puae2021",
+        "puae",
+        "km_puae_xtreme_amped"
+      ],
+      "selected": "uae4arm",
+      "overrides": {},
+      "devices": [
+        "MIYOO_MINI_FLIP"
+      ]
     }
   },
   "sortOrder": 100,
