--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -25,7 +25,27 @@
         "snes9x"
       ],
       "selected": "chimerasnes",
-      "overrides": {}
+      "overrides": {},
+      "devices": [
+        "MIYOO_A30",
+        "MIYOO_FLIP",
+        "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
+        "TRIMUI_BRICK"
+      ]
+    },
+    "Emulator_MiyooMini": {
+      "display": "Retroarch Core",
+      "options": [
+        "mednafen_supafaust",
+        "snes9x",
+        "snes9x2010"
+      ],
+      "selected": "mednafen_supafaust",
+      "overrides": {},
+      "devices": [
+        "MIYOO_MINI_FLIP"
+      ]
     }
   },
   "sortOrder": 6200,
