--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -35,6 +35,7 @@
       "devices": [
         "MIYOO_FLIP",
         "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
         "TRIMUI_BRICK"
       ],
       "options": [
