--- a/Emu/NAOMI/config.json
+++ b/Emu/NAOMI/config.json
@@ -38,6 +38,7 @@
       "devices": [
         "MIYOO_FLIP",
         "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
         "TRIMUI_BRICK"
       ],
       "options": [
