--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -39,6 +39,7 @@
       "devices": [
         "MIYOO_FLIP",
         "TRIMUI_SMART_PRO",
+        "TRIMUI_SMART_PRO_S",
         "TRIMUI_BRICK"
       ],
       "options": [
