--- a/Emu/SATURN/config.json
+++ b/Emu/SATURN/config.json
@@ -39,5 +39,5 @@
   "releaseYear": 1994,
   "default_emulator": "yabasanshiro-libretro",
   "scaling_min_freq": 1008000,
-  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO", "MIYOO_FLIP"]
+  "devices": ["TRIMUI_BRICK", "TRIMUI_SMART_PRO","TRIMUI_SMART_PRO_S", "MIYOO_FLIP"]
 }
