Add an option to keep saves sync'd between cores
Currently backs up old savestates, might need a task to clear these out

--- a/Saves/spruce/spruce-config.json
+++ b/Saves/spruce/spruce-config.json
@@ -208,6 +208,14 @@
                 ],
                 "selected": "True"
             },
+            "keepSavesBetweenCores": {
+                "display": "Keep saves between cores",
+                "options": [
+                    "True",
+                    "False"
+                ],
+                "selected": "False"
+            },
             "raHotkeyMiyoo": {
                 "display": "RA: hotkey enable button",
                 "description": "custom allows to set in RA itself",
