Use one standardized PATH variable per PLATFORM - reset to this whenever helperFunctions is sourced, then append to it or overwrite as needed. This prevents silly long appended PATHs with many repeated dirs and gives greater predictability to what is or is not in PATH at any given time.

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -46,6 +46,7 @@ export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant/wpa_supplicant.conf"
 #####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
   ###############################################
 
+export PATH=/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sbin
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="true"
