--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -46,6 +46,7 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
 #####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
   ###############################################
 
+export PATH=/mnt/SDCARD/spruce/bin:/usr/miyoo/bin:/usr/bin:/usr/sbin:/bin:/sbin
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="false"
