--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -46,6 +46,7 @@ export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
 #####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
   ###############################################
 
+export PATH=/mnt/SDCARD/spruce/bin64:/usr/miyoo/bin:/usr/bin:/usr/sbin:/bin:/sbin
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="true"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="true"
