Create a sleep helper and a v2 version of power/lid watchdog to go from
Currently only for miyoo mini but setup to be expandable to other devices

--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -62,36 +62,36 @@ export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
 export POWER_EVENT="/dev/input/event0"
 
-export B_POWER="1 116"
+export B_POWER="B_POWER"
 
-export B_LEFT="1 105 1"
-export B_RIGHT="1 106 1"
-export B_UP="1 103 1"
-export B_DOWN="1 108 1"
+export B_LEFT="B_LEFT"
+export B_RIGHT="B_RIGHT"
+export B_UP="B_UP"
+export B_DOWN="B_DOWN"
 
-export B_A="1 57"
-export B_B="1 29"
-export B_X="1 42"
-export B_Y="1 56"
+export B_A="B_A"
+export B_B="B_B"
+export B_X="B_X"
+export B_Y="B_Y"
 
-export B_L1="1 15"
-export B_L2="1 18"
-export B_R1="1 14"
-export B_R2="1 20"
+export B_L1="B_L1"
+export B_L2="B_L2"
+export B_R1="B_R1"
+export B_R2="B_R2"
 
-export B_L3="1 317" # used to send virtual keypresses to emulators
-export B_R3="1 318" # used to send virtual keypresses to emulators
+export B_L3="B_L3" # used to send virtual keypresses to emulators
+export B_R3="B_R3" # used to send virtual keypresses to emulators
 
-export B_START="1 28"
+export B_START="B_START"
 export B_START_2="enter_pressed" # only registers 0 on release, no 1 on press
-export B_SELECT="1 97"
+export B_SELECT="B_SELECT"
 export B_SELECT_2="rctrl_pressed"
 
-export B_VOLUP="1 115"
+export B_VOLUP="B_VOLUP"
 export B_VOLUP_2="volume up"
-export B_VOLDOWN="1 114"
+export B_VOLDOWN="B_VOLDOWN"
 export B_VOLDOWN_2="volume down"
-export B_MENU="1 1"
+export B_MENU="B_MENU"
 
   #########################################
 #####   VOLUME AND BRIGHTNESS MAPPING   #####
