--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -49,6 +49,7 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
   ###############################################
 
 export PATH=/mnt/SDCARD/spruce/miyoomini/bin:/customer/app:/mnt/SDCARD/spruce/bin:/usr/miyoo/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export SPRUCE_ETC_DIR="/mnt/SDCARD/spruce/miyoomini/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/miyoomini/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="false"
