--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -47,6 +47,7 @@ export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
   ###############################################
 
 export PATH=/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export SPRUCE_ETC_DIR="/mnt/SDCARD/trimui/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="true"
