Handle same core name accross different architecture without save state compatability

--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -127,3 +127,5 @@ export SYSTEM_VOLUME_17="216"
 export SYSTEM_VOLUME_18="229"
 export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
+
+export PLATFORM_ARCHITECTURE="aarch64"
