--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -144,3 +144,5 @@ export SYSTEM_BRIGHTNESS_7="120"
 export SYSTEM_BRIGHTNESS_8="150"
 export SYSTEM_BRIGHTNESS_9="180"
 export SYSTEM_BRIGHTNESS_10="220"
+
+export PLATFORM_ARCHITECTURE="aarch64"
