--- a/spruce/scripts/platform/MiyooMini.cfg
+++ b/spruce/scripts/platform/MiyooMini.cfg
@@ -131,3 +131,5 @@ export SYSTEM_BRIGHTNESS_7="128"
 export SYSTEM_BRIGHTNESS_8="162"
 export SYSTEM_BRIGHTNESS_9="200"
 export SYSTEM_BRIGHTNESS_10="255"
+
+export PLATFORM_ARCHITECTURE="armhf"
