--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -140,3 +140,5 @@ export SYSTEM_BRIGHTNESS_7="157"
 export SYSTEM_BRIGHTNESS_8="178"
 export SYSTEM_BRIGHTNESS_9="199"
 export SYSTEM_BRIGHTNESS_10="220"
+
+export PLATFORM_ARCHITECTURE="aarch64"
