--- a/Emu/AMIGA/config.json
+++ b/Emu/AMIGA/config.json
@@ -3,7 +3,7 @@
   "icon": "amiga.png",
   "iconsel": "amiga_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|adf|adz|dms|fdi|ipf|hdf|hdz|lha|slave|info|cue|ccd|nrg|mds|iso|chd|uae|m3u|rp9",
   "launchlist": [],
   "menuOptions": {
