--- a/Emu/COMMODORE/config.json
+++ b/Emu/COMMODORE/config.json
@@ -3,7 +3,7 @@
   "icon": "c64.png",
   "iconsel": "c64_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "d64|zip|7z|t64|crt|prg|nib|tap",
   "launchlist": [],
   "menuOptions": {
