--- a/Emu/DOS/config.json
+++ b/Emu/DOS/config.json
@@ -3,7 +3,7 @@
   "icon": "dos.png",
   "iconsel": "dos_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|dosz|exe|com|bat|iso|ins|img|ima|vhd|jrc|tc|m3u|m3u8|conf",
   "launchlist": [],
   "menuOptions": {
