--- a/Emu/FAIRCHILD/config.json
+++ b/Emu/FAIRCHILD/config.json
@@ -3,7 +3,7 @@
   "icon": "fairchild.png",
   "iconsel": "fairchild_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|bin|rom|chf",
   "launchlist": [],
   "menuOptions": {
