--- a/Emu/GAMETANK/config.json
+++ b/Emu/GAMETANK/config.json
@@ -3,7 +3,7 @@
   "icon": "gametank.png",
   "iconsel": "gametank_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "gtr|zip|7z",
   "launchlist": [],
   "menuOptions": {
