--- a/Emu/GG/config.json
+++ b/Emu/GG/config.json
@@ -3,7 +3,7 @@
   "icon": "gg.png",
   "iconsel": "gg_sel.png",
   "themecolor": "FFFFFF",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "bin|gg|zip|7z",
   "launchlist": [],
   "menuOptions": {
