--- a/Emu/MS/config.json
+++ b/Emu/MS/config.json
@@ -3,7 +3,7 @@
   "icon": "ms.png",
   "iconsel": "ms_sel.png",
   "themecolor": "740009",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "gen|smd|md|32x|bin|iso|sms|68k|chd|zip|7z",
   "launchlist": [],
   "menuOptions": {
