--- a/Emu/MSU1/config.json
+++ b/Emu/MSU1/config.json
@@ -3,7 +3,7 @@
   "icon": "msu1.png",
   "iconsel": "msu1_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "sfc|smc|zip|7z|fig|bs|st",
   "launchlist": [],
   "menuOptions": {
