--- a/Emu/PC98/config.json
+++ b/Emu/PC98/config.json
@@ -3,7 +3,7 @@
   "icon": "pc98.png",
   "iconsel": "pc98_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "d98|zip|98d|fdi|fdd|2hd|tfd|d88|88d|hdm|xdf|dup|cmd|hdi|thd|nhd|hdd|hdn",
   "launchlist": [],
   "menuOptions": {
