--- a/Emu/PORTS/config.json
+++ b/Emu/PORTS/config.json
@@ -3,7 +3,7 @@
   "icon": "ports.png",
   "iconsel": "ports_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "ingamemenu": 1,
   "extlist": "sh",
   "launchlist": [],
