--- a/Emu/SEGACD/config.json
+++ b/Emu/SEGACD/config.json
@@ -3,7 +3,7 @@
   "icon": "segacd.png",
   "iconsel": "segacd_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "chd|m3u|zip|7z|gen|smd|md|32x|cue|iso|sms|68k",
   "launchlist": [
     {
