--- a/Emu/SFC/config.json
+++ b/Emu/SFC/config.json
@@ -3,7 +3,7 @@
   "icon": "sfc.png",
   "iconsel": "sfc_sel.png",
   "themecolor": "FF0000",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|smc|sfc|fig|gd3|gd7|dx2|bsx|bs|swc|st",
   "launchlist": [],
   "menuOptions": {
