--- a/Emu/THIRTYTWOX/config.json
+++ b/Emu/THIRTYTWOX/config.json
@@ -3,7 +3,7 @@
   "icon": "32X.png",
   "iconsel": "32X_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|gen|smd|md|32x|bin|iso|sms|68k|chd",
   "launchlist": [],
   "menuOptions": {
