--- a/Emu/WS/config.json
+++ b/Emu/WS/config.json
@@ -3,7 +3,7 @@
   "icon": "ws.png",
   "iconsel": "ws_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "ws|wsc|zip|7z|pc2",
   "launchlist": [],
   "menuOptions": {
