--- a/Emu/ATARI/config.json
+++ b/Emu/ATARI/config.json
@@ -3,7 +3,7 @@
   "icon": "atari.png",
   "iconsel": "atari_sel.png",
   "themecolor": "AF7AC5",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "a26|zip|7z|bin",
   "launchlist": [],
   "menuOptions": {
