--- a/Emu/EIGHTHUNDRED/config.json
+++ b/Emu/EIGHTHUNDRED/config.json
@@ -3,7 +3,7 @@
   "icon": "atari800.png",
   "iconsel": "atari800_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|xfd|atr|cdm|cas|bin|a52|atx|car|com|xex",
   "launchlist": [],
   "menuOptions": {
