--- a/Emu/FDS/config.json
+++ b/Emu/FDS/config.json
@@ -3,7 +3,7 @@
   "icon": "fds.png",
   "iconsel": "fds_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|fds|nes|unif|unf",
   "launchlist": [],
   "menuOptions": {
