--- a/Emu/GB/config.json
+++ b/Emu/GB/config.json
@@ -3,7 +3,7 @@
   "icon": "gb.png",
   "iconsel": "gb_sel.png",
   "themecolor": "00FF00",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "gb|gbc|zip|7z|bin|dmg",
   "launchlist": [],
   "menuOptions": {
