--- a/Emu/INTELLIVISION/config.json
+++ b/Emu/INTELLIVISION/config.json
@@ -3,7 +3,7 @@
   "icon": "itv.png",
   "iconsel": "itv_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|bin|int",
   "launchlist": [
     {
