--- a/Emu/MAME2003PLUS/config.json
+++ b/Emu/MAME2003PLUS/config.json
@@ -3,7 +3,7 @@
   "icon": "mame.png",
   "iconsel": "mame_sel.png",
   "themecolor": "00CCFF",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip",
   "launchlist": [],
   "menuOptions": {
