--- a/Emu/MEDIA/config.json
+++ b/Emu/MEDIA/config.json
@@ -3,7 +3,7 @@
   "icon": "ffplay.png",
   "iconsel": "ffplay_sel.png",
   "themecolor": "DDEEFF",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "mp4|mkv|avi|mov|flv|ts|mp3|m4a|wav|aac|flac|ogg|opus|mka",
   "launchlist": [],
   "sortOrder": 3300,
