--- a/Emu/MSUMD/config.json
+++ b/Emu/MSUMD/config.json
@@ -3,7 +3,7 @@
   "icon": "msumd.png",
   "iconsel": "msumd_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|gen|smd|md|32x|bin|iso|sms|68k|chd",
   "launchlist": [],
   "menuOptions": {
