--- a/Emu/MSX/config.json
+++ b/Emu/MSX/config.json
@@ -3,7 +3,7 @@
   "icon": "msx.png",
   "iconsel": "msx_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|rom|mx1|mx2|dsk|cas|m3u",
   "launchlist": [],
   "menuOptions": {
