--- a/Emu/N64/config.json
+++ b/Emu/N64/config.json
@@ -3,7 +3,7 @@
   "icon": "n64.png",
   "iconsel": "n64_sel.png",
   "themecolor": "FFFF88",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|n64|z64|v64",
   "launchlist": [],
   "menuOptions": {
