--- a/Emu/NGPC/config.json
+++ b/Emu/NGPC/config.json
@@ -3,7 +3,7 @@
   "icon": "ngpc.png",
   "iconsel": "ngpc_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "ngp|ngc|zip|7z",
   "launchlist": [],
   "menuOptions": {
