--- a/Emu/PS/config.json
+++ b/Emu/PS/config.json
@@ -3,7 +3,7 @@
   "icon": "ps.png",
   "iconsel": "ps_sel.png",
   "themecolor": "00FF00",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "m3u|chd|cue|img|mdf|pbp|PBP|toc|cbn",
   "launchlist": [
     {
