--- a/Emu/QUAKE/config.json
+++ b/Emu/QUAKE/config.json
@@ -3,7 +3,7 @@
   "icon": "quake.png",
   "iconsel": "quake_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "fbl|pak",
   "launchlist": [],
   "menuOptions": {
