--- a/Emu/SATELLAVIEW/config.json
+++ b/Emu/SATELLAVIEW/config.json
@@ -3,7 +3,7 @@
   "icon": "satella.png",
   "iconsel": "satella_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|bs|sfc|smc|swc|fig|st",
   "launchlist": [],
   "menuOptions": {
