--- a/Emu/SCUMMVM/config.json
+++ b/Emu/SCUMMVM/config.json
@@ -3,7 +3,7 @@
   "icon": "scummvm.png",
   "iconsel": "scummvm_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "scummvm",
   "launchlist": [],
   "menuOptions": {
