--- a/Emu/SGB/config.json
+++ b/Emu/SGB/config.json
@@ -3,7 +3,7 @@
   "icon": "sgb.png",
   "iconsel": "sgb_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "gb|gbc|gba|zip|7z|bin",
   "launchlist": [],
   "menuOptions": {
