--- a/Emu/SGFX/config.json
+++ b/Emu/SGFX/config.json
@@ -3,7 +3,7 @@
   "icon": "sgfx.png",
   "iconsel": "sgfx_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|pce|sgx|cue|ccd|chd",
   "launchlist": [],
   "menuOptions": {
