--- a/Emu/ZXS/config.json
+++ b/Emu/ZXS/config.json
@@ -3,7 +3,7 @@
   "icon": "zxs.png",
   "iconsel": "zxs_sel.png",
   "themecolor": "",
-  "launch": "../.emu_setup/standard_launch.sh",
+  "launch": "../../spruce/scripts/emu/standard_launch.sh",
   "extlist": "zip|7z|tzx|tap|z80|rzx|scl|trd",
   "launchlist": [],
   "menuOptions": {
