Basic port support on trimui devices

--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -146,3 +146,4 @@ export SYSTEM_BRIGHTNESS_9="180"
 export SYSTEM_BRIGHTNESS_10="220"
 
 export PLATFORM_ARCHITECTURE="aarch64"
+export PORTS_LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib/:/usr/lib:/mnt/SDCARD/spruce/flip/muOS/usr/lib/:/mnt/SDCARD/spruce/flip/muOS/lib/:/usr/lib32:/mnt/SDCARD/spruce/flip/lib32/:/mnt/SDCARD/spruce/flip/muOS/usr/lib32/"
