--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -130,3 +130,4 @@ export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
 
 export PLATFORM_ARCHITECTURE="aarch64"
+export PORTS_LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib/:/usr/lib:/mnt/SDCARD/spruce/flip/muOS/usr/lib/:/mnt/SDCARD/spruce/flip/muOS/lib/:/usr/lib32:/mnt/SDCARD/spruce/flip/lib32/:/mnt/SDCARD/spruce/flip/muOS/usr/lib32/:/usr/trimui/lib:/usr/lib:/lib"
