WIP to get ports working on SmartPro

--- a/spruce/scripts/platform/SmartPro.cfg
+++ b/spruce/scripts/platform/SmartPro.cfg
@@ -46,7 +46,7 @@ export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant.conf"
 #####   SOFTWARE CHARACTERISTICS AND QUIRKS   #####
   ###############################################
 
-export PATH=/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export PATH=/mnt/SDCARD/spruce/smartpro/bin/:/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sbin
 export SPRUCE_ETC_DIR="/mnt/SDCARD/trimui/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
@@ -130,4 +130,4 @@ export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
 
 export PLATFORM_ARCHITECTURE="aarch64"
-export PORTS_LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib/:/usr/lib:/mnt/SDCARD/spruce/flip/muOS/usr/lib/:/mnt/SDCARD/spruce/flip/muOS/lib/:/usr/lib32:/mnt/SDCARD/spruce/flip/lib32/:/mnt/SDCARD/spruce/flip/muOS/usr/lib32/:/usr/trimui/lib:/usr/lib:/lib"
+export PORTS_LD_LIBRARY_PATH="/usr/trimui/lib:/usr/lib:/lib"
