Set LD_LIBRARY_PATH as part of importing $PLATFORM.cfg files via helperFunctions.sh - will help circumvent stupid long path chains and make it easier to predict behavior and know when to overwrite/append to it

--- a/spruce/scripts/platform/Flip.cfg
+++ b/spruce/scripts/platform/Flip.cfg
@@ -47,6 +47,7 @@ export WPA_SUPPLICANT_FILE="/userdata/cfg/wpa_supplicant.conf"
   ###############################################
 
 export PATH=/mnt/SDCARD/spruce/bin64:/usr/miyoo/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib:/usr/miyoo/lib:/usr/lib:/lib"
 export SPRUCE_ETC_DIR="/mnt/SDCARD/miyoo355/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="true"
