--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -48,6 +48,7 @@ export WPA_SUPPLICANT_FILE="/etc/wifi/wpa_supplicant/wpa_supplicant.conf"
   ###############################################
 
 export PATH=/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export LD_LIBRARY_PATH="/usr/trimui/lib:/usr/lib:/lib:/mnt/SDCARD/spruce/flip/lib"
 export SPRUCE_ETC_DIR="/mnt/SDCARD/trimui/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
