--- a/spruce/scripts/platform/A30.cfg
+++ b/spruce/scripts/platform/A30.cfg
@@ -47,6 +47,7 @@ export WPA_SUPPLICANT_FILE="/config/wpa_supplicant.conf"
   ###############################################
 
 export PATH=/mnt/SDCARD/spruce/bin:/usr/miyoo/bin:/usr/bin:/usr/sbin:/bin:/sbin
+export LD_LIBRARY_PATH="/mnt/SDCARD/spruce/a30/lib:/mnt/SDCARD/miyoo/lib:/usr/miyoo/lib:/usr/lib:/lib"
 export SPRUCE_ETC_DIR="/mnt/SDCARD/miyoo/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/bin/Python3/bin/python3
 export DEVICE_SUPPORTS_PORTMASTER="false"
