ensure OSDD is up before assigning it a hotkey; reorganize newly added PLATFORM.cfg exports

--- a/spruce/scripts/platform/Brick.cfg
+++ b/spruce/scripts/platform/Brick.cfg
@@ -12,6 +12,8 @@ export REQ_MB_TO_UPDATE_FW=1280
 export SYSTEM_JSON="/mnt/SDCARD/Saves/trim-ui-brick-system.json"
 export SYSTEM_PATH="/mnt/SDCARD/trimui"
 export SD_DEV="/dev/mmcblk1p1"
+export PLATFORM_ARCHITECTURE="aarch64"
+
 
   ###################################
 #####   DISPLAY CHARACTERISTICS   #####
@@ -50,13 +52,16 @@ export PATH=/mnt/SDCARD/spruce/bin64:/usr/trimui/bin:/usr/bin:/usr/sbin:/bin:/sb
 export LD_LIBRARY_PATH="/usr/trimui/lib:/usr/lib:/lib:/mnt/SDCARD/spruce/flip/lib"
 export SPRUCE_ETC_DIR="/mnt/SDCARD/trimui/etc"
 export DEVICE_PYTHON3_PATH=/mnt/SDCARD/spruce/flip/bin/python3
-export DEVICE_SUPPORTS_PORTMASTER="false"
+export DEVICE_SUPPORTS_PORTMASTER="true"
+export PORTS_LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib/:/usr/lib:/mnt/SDCARD/spruce/flip/muOS/usr/lib/:/mnt/SDCARD/spruce/flip/muOS/lib/:/usr/lib32:/mnt/SDCARD/spruce/flip/lib32/:/mnt/SDCARD/spruce/flip/muOS/usr/lib32/:/usr/trimui/lib:/usr/lib:/lib"
 export DEVICE_CAN_USE_EXTERNAL_CONTROLLER="true"
 export DEVICE_USES_64_BIT_RA="true"
 
   ######################################
 #####   KEY CODES AND INPUT EVENTS   #####
   ######################################
+
+export OSD_HOTKEY="MENU+SELECT"
 
 export EVENT_PATH_KEYBOARD="/dev/input/event3"
 export EVENT_PATH_JOYPAD="/dev/input/event3"
@@ -129,5 +134,3 @@ export SYSTEM_VOLUME_18="229"
 export SYSTEM_VOLUME_19="242"
 export SYSTEM_VOLUME_20="255"
 
-export PLATFORM_ARCHITECTURE="aarch64"
-export PORTS_LD_LIBRARY_PATH="/mnt/SDCARD/spruce/flip/lib/:/usr/lib:/mnt/SDCARD/spruce/flip/muOS/usr/lib/:/mnt/SDCARD/spruce/flip/muOS/lib/:/usr/lib32:/mnt/SDCARD/spruce/flip/lib32/:/mnt/SDCARD/spruce/flip/muOS/usr/lib32/:/usr/trimui/lib:/usr/lib:/lib"
