--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-SmartProS.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-SmartProS.ini
@@ -4,7 +4,7 @@ RunCount = 1
 Enable Logging = True
 AutoRun = True
 Browse = False
-IgnoreBadMemAccess = True
+IgnoreBadMemAccess = False
 CurrentDirectory = /mnt/SDCARD/Roms/PSP
 ShowDebuggerOnLoad = False
 CheckForNewVersion = False
