--- a/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
+++ b/Emu/.emu_setup/.config/ppsspp/PSP/SYSTEM/ppsspp-A30.ini
@@ -10,7 +10,7 @@ ShowDebuggerOnLoad = False
 CheckForNewVersion = False
 Language = en_US
 ForceLagSync2 = False
-DiscordPresence = True
+DiscordPresence = False
 UISound = False
 AutoLoadSaveState = 2
 EnableCheats = True
@@ -108,7 +108,7 @@ TextureFiltering = 1
 InternalResolution = 1
 AndroidHwScale = 1
 HighQualityDepth = 1
-FrameSkip = 3
+FrameSkip = 2
 FrameSkipType = 0
 AutoFrameSkip = True
 StereoRendering = False
@@ -120,7 +120,7 @@ UnthrottlingMode = CONTINUOUS
 AnisotropyLevel = 0
 MultiSampleLevel = 0
 TextureBackoffCache = True
-FullScreen = False
+FullScreen = True
 FullScreenMulti = False
 BufferFiltering = 1
 DisplayOffsetX = 0.500000
@@ -141,7 +141,7 @@ TexDeposterize = True
 TexHardwareScaling = False
 VSync = False
 BloomHack = 0
-SplineBezierQuality = 0
+SplineBezierQuality = 1
 HardwareTessellation = False
 TextureShader = Off
 ShaderChainRequires60FPS = False
@@ -438,7 +438,7 @@ PSPModel = 1
 PSPFirmwareVersion = 660
 NickName = spruceman
 MacAddress = 08:e6:ee:3f:57:e3
-GameLanguage = 1
+GameLanguage = -1
 ParamTimeFormat = 0
 ParamDateFormat = 0
 TimeZone = 0
