Add VOLUME path for smart pro s in case we want it in the future

--- a/spruce/scripts/platform/SmartProS.cfg
+++ b/spruce/scripts/platform/SmartProS.cfg
@@ -67,6 +67,7 @@ export OSD_HOTKEY="HOME"
 export EVENT_PATH_KEYBOARD="/dev/input/event4"
 export EVENT_PATH_JOYPAD="/dev/input/event4"
 export POWER_EVENT="/dev/input/event2"
+export EVENT_PATH_VOLUME="/dev/input/event0"
 
 export B_POWER="1 116"
     
